# cmake_test

./: README.md
t2/: CMakeLists.txt  runhello.sh
t3/lib/: .CMakeLists.txt.swp  CMakeLists.txt
t4/src/: CMakeLists.txt
t5/: main.c
t5/src/: CMakeLists.txt
